<resources>
    <string name="app_name" translatable="false">B4cklog</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="login_label">Login</string>
    <string name="dark_mode">Dark mode</string>
    <string name="cover_url">Cover URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="age">Age</string>
    <string name="signup_label">Registration</string>
    <string name="game_title">Game title</string>
    <string name="game_summary">Game summary</string>
    <string name="release_date">Release date</string>
    <string name="add_to_backlog">Add to backlog</string>
    <string name="want_to_play">Want to play</string>
    <string name="playing">Playing</string>
    <string name="played">Played</string>
    <string name="completed">Completed</string>
    <string name="completed_100">Completed (100%)</string>
    <string name="wishlist">Wishlist</string>
    <string name="full_name_age">Full name + Age</string>
    <string name="remove_from_backlog">Remove from backlog</string>
    <string name="in_a_list">In a list</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>
    <string name="new_email">New Email</string>
    <string name="update_email">Update Email</string>
    <string name="latest_releases">Latest releases</string>
    <string name="popular_releases">Popular</string>
    <string name="sign_out">Sign out</string>
    <string name="account">Account</string>
    <string name="clear_history">Clear history</string>
    <string name="no_results">No results</string>
    <string name="update">Update</string>
    <string name="average_rating">Average rating</string>
    <string name="leave_review">Leave a review</string>
    <string name="review">Review</string>
    <string name="delete_from_backlog">Remove from backlog</string>
    <string name="your_review">Your review</string>
    <string name="release_date_with_format">Release date (YYYY-MM-DD)</string>
    <string name="platforms">Platforms</string>
    <string name="save">Save</string>
    <string name="platform_name">Platform title</string>
    <string name="add_platform">Add platform</string>
    <string name="edit">Edit</string>
    <string name="add_game">Add game</string>
    <string name="search_game">Search game</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="your_rating">Your rating</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="network_error">Network error</string>
    <string name="deleting_error">Deleting error</string>
    <string name="login_error">Login error</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="register_error">Register error</string>
    <string name="getting_data_error">Error getting data</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_email">Enter new Email</string>
    <string name="update_error">Update error</string>
    <string name="error">Error</string>
    <string name="email_updated">Email updated</string>
    <string name="password_updated">Password updated</string>
    <string name="game_added">Game added</string>
    <string name="admin_access_only">Admin access only</string>
    <string name="game_updated">Game updated</string>
    <string name="fill_all_fields_and_platforms">Fill all fields and select platforms</string>
    <string name="removed_from_all_lists">Removed from all lists</string>
    <string name="addition_error">Addition error</string>
    <string name="added_to_list">Added to list</string>
    <string name="review_sent">Review sent</string>
    <string name="user_is_not_authorized">User is not authorized</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshots">Screenshots</string>
    <string name="genres">Genres</string>
</resources>