<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonUpdateEmail"
        android:text="@string/update_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Пароль -->
    <EditText
        android:id="@+id/editTextPassword"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonUpdatePassword"
        android:text="@string/update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
