<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/android:colorBackground"
    android:padding="16dp">

    <ImageView
        android:id="@+id/game_cover"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/forza1"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="24sp"
        android:textColor="?attr/colorOnBackground"/>

    <TextView
        android:id="@+id/game_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_summary"
        android:textSize="16sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/game_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:textSize="16sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/game_platforms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plaforms"
        android:textSize="16sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="16dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/add_to_backlog"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="16dp" />

</LinearLayout>